# SlideShow

./: .gitignore  CMakeLists.txt  Messages.sh
src/: CMakeLists.txt  slideshow.cpp  slideshow.h
src/package/: metadata.json
src/package/contents/ui/: main.qml
